# rag-template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: alembic.ini  env.py
alembic/versions/: 04f8e0dbaf8d_fix_engine_config.py
app/: config.py  dependencies.py  main.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py
app/database/: __init__.py  session.py
app/database/models/: __init__.py  agent.py  base.py  chat.py  message.py
app/database/repositories/: __init__.py  agent.py  base.py  chat.py
app/models/: chat.py  database.py  rag.py  schemas.py
app/routes/: agents.py  rag.py
app/schemas/: __init__.py  agent.py  api.py  chat.py  retrieveal.py
app/services/: __init__.py  base.py  indexing.py  retrieval.py
app/services/agent/: __init__.py  manager.py
app/services/chat/: __init__.py  manager.py
app/services/document/: factory.py  loader.py  processor.py
app/services/rag/: __init__.py  base.py  chain.py
app/services/rag/indexing/: __init__.py  indexing_service.py
app/services/rag/retrieval/: __init__.py  retrieval_service.py
app/utils/: chroma_manager.py  ollama_embed.py  text_loader.py  web_loader.py
