[project]
name = "rag-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Baurzhan Beglerov", email = "bbeglerov@icloud.com"}
]

readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-chroma",
    "python-dotenv",
    "litellm",
    "chromadb",
    "python-multipart",
    "pypdf",
    "langchain-together",
    "sqlalchemy[asyncio]",
    "async-property",
    "pydantic[email]",
    "psycopg2-binary",
    "asyncpg",
    "greenlet",
    "alembic"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false